Done some more list questions

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -2313,10 +2313,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[2, 8, 'Robin']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Iterate on one list's elements (here we are using list comprehension) and check if that element is in other list\n",
+        "\n",
+        "# Create Lists\n",
+        "list_1 = [1,2,4,8,9, 'Robin']\n",
+        "list_2 = [2,3,5,6,8, 'Robin']\n",
+        "\n",
+        "# Find common values\n",
+        "common_elements = [element for element in list_1 if element in list_2]\n",
+        "\n",
+        "# Print values\n",
+        "print(common_elements)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2327,10 +2347,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 99, 4, 9, 'Pabbi']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Same as que 21 but here we will check not in list 2\n",
+        "\n",
+        "# Create Lists\n",
+        "list_3 = [1,99,4,8,9, 'Robin', 'Pabbi']\n",
+        "list_4 = [2,5,6,8, 'Robin']\n",
+        "\n",
+        "# Find difference list3 - list4\n",
+        "difference = [element for element in list_3 if element not in list_4]\n",
+        "\n",
+        "# Print values\n",
+        "print(difference)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 99, 4, 5, 6, 9, 'Pabbi']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Second solution - to get complete difference (means non common elements from both lists)\n",
+        "# Above solution gave only list 3 elements which are not in list 4\n",
+        "\n",
+        "# Approach using - Can we use symmetric_difference function of set\n",
+        "# Learning - symmetric_difference gives difference (non common and unique elements) from both sets\n",
+        "\n",
+        "# Create Lists\n",
+        "list_5 = [1,99,4,4,8,9, 'Robin', 'Pabbi']\n",
+        "list_6 = [2,5,6,8, 'Robin']\n",
+        "\n",
+        "# Find difference list3 - list4\n",
+        "difference1 = list(set(list_5).symmetric_difference(list_6))\n",
+        "\n",
+        "# Print values\n",
+        "print(difference1)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2341,10 +2412,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Hi', 1, 2, 4, 'Robin', 'Pabbi', 5, 6, 7]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Use concatenation + operator\n",
+        "\n",
+        "# Create Lists\n",
+        "list_1 = ['Hi', 1, 2, 4, 'Robin']\n",
+        "list_2 = ['Pabbi', 5, 6, 7]\n",
+        "\n",
+        "# Find difference list3 - list4\n",
+        "merged_list = list_1 + list_2\n",
+        "\n",
+        "# Print values\n",
+        "print(merged_list)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2355,10 +2446,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[2, 4, 74, 156, 198, 200]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Using List comprehension\n",
+        "\n",
+        "# Create a list\n",
+        "list_to_multiply = [1, 2, 37, 78, 99, 100]\n",
+        "\n",
+        "# Perform multiplication\n",
+        "list_double_values = [num * 2 for num in list_to_multiply]\n",
+        "\n",
+        "# Print Resulted List\n",
+        "print(list_double_values)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2369,9 +2479,37 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 19,
       "metadata": {},
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[2, 78, 100, 4, 6, 22]"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Approach - Although we can use list comprehension here too but we will use filter built in method\n",
+        "\n",
+        "# Function - Takes int as input and return boolean (True if even else False)\n",
+        "def is_even(num:int)-> bool:\n",
+        "    return num %2 == 0\n",
+        "\n",
+        "# Create a list\n",
+        "list_to_filter = [1, 2, 37, 78, 99, 100, 4, 6, 7, 22, 33]\n",
+        "\n",
+        "# Apply filter to list\n",
+        "even_numbers = list(filter(is_even, list_to_filter))\n",
+        "\n",
+        "# Print Result\n",
+        "even_numbers"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2382,10 +2520,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[26, 9, 17, 8, 143]\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "# Create List of Integer values as string\n",
+        "list_string_integers = ['26', '9', '17', '8', '143']\n",
+        "\n",
+        "# Convert string elements to numbers (integers)\n",
+        "list_numbers = [int(strNum) for strNum in list_string_integers]\n",
+        "\n",
+        "# Print numeric list\n",
+        "print(list_numbers)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2399,7 +2555,16 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# Create List of Integer values\n",
+        "list_integers = [26, 9, 17, 8, 143]\n",
+        "\n",
+        "# Convert int elements to string\n",
+        "list_string_numbers = [str(num) for num in list_integers]\n",
+        "\n",
+        "# Print numeric list\n",
+        "print(list_string_numbers)"
+      ]
     },
     {
       "cell_type": "markdown",
