Email validity que done with help of regex

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -1319,10 +1319,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Entered email address is valid.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - here we will use the concept of regexs\n",
+        "\n",
+        "# Import rejex\n",
+        "import re\n",
+        "\n",
+        "# Define the regex for valid email address\n",
+        "valid_email_regex = r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,7}\\b'\n",
+        "\n",
+        "# Take email input from user\n",
+        "email_id = input('Enter email address: ')\n",
+        "\n",
+        "# Check validity and print validity\n",
+        "if(re.fullmatch(valid_email_regex, email_id)):\n",
+        "    print('Entered email address is valid.')\n",
+        "else:\n",
+        "    print('Entered email address is invalid.')\n",
+        " "
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2552,9 +2578,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['26', '9', '17', '8', '143']\n"
+          ]
+        }
+      ],
       "source": [
         "# Create List of Integer values\n",
         "list_integers = [26, 9, 17, 8, 143]\n",
