Some more string questions solved

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -1359,10 +1359,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hi! pabbirobin\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Username is part of email address before @\n",
+        "# So split it by @ and zeroth (0) index is username\n",
+        "\n",
+        "# Take email input from user\n",
+        "email_id = input('Enter email address: ')\n",
+        "\n",
+        "# Extract username\n",
+        "user_name = email_id.split('@')[0]\n",
+        "\n",
+        "# Print User Name\n",
+        "print(f'Hi! {user_name}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hi! pabbirobin\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Second solution - for my learning - using regex\n",
+        "import re\n",
+        "\n",
+        "# Regex -Basically all the chars (a to z, A to Z, 0 to 9, special char '.' or '-') before @\n",
+        "usrname_regex = r'([A-Za-z0-9.-]+)\\@'\n",
+        "\n",
+        "# Take email input from user\n",
+        "email_id = input('Enter email address: ')\n",
+        "\n",
+        "# Get username\n",
+        "user_name = re.findall(usrname_regex, email_id)[0]\n",
+        "\n",
+        "# Print User Name\n",
+        "print(f'Hi! {user_name}')\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1374,10 +1424,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "xyz.com\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - Domain is part of email address after @\n",
+        "# So split it by @ and 1 index is Domain\n",
+        "\n",
+        "# Take email input from user\n",
+        "email_id = input('Enter email address: ')\n",
+        "\n",
+        "# Extract domain\n",
+        "domain = email_id.split('@')[1]\n",
+        "\n",
+        "# Print Domain\n",
+        "print(domain)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ljljl.com\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Second solution - for my learning - using regex\n",
+        "\n",
+        "# Although we have imported in cells above but for completeness of solution let us import again\n",
+        "import re\n",
+        "\n",
+        "# Regex - Basically all the chars (a to z, A to Z, 0 to 9, special char '.' or '-') after @\n",
+        "usrname_regex = r'@([A-Za-z0-9.-]+)'\n",
+        "\n",
+        "# Take email input from user\n",
+        "email_id = input('Enter email address: ')\n",
+        "\n",
+        "# Get domain name (complete domain with .com or .co.in etc)\n",
+        "domain = re.findall(usrname_regex, email_id)[0]\n",
+        "\n",
+        "# Print Domain\n",
+        "print(domain)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1389,10 +1491,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'irwhk er weor wer werwe rrwer w wer wrw werrw wer'"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Approach - using REGEX\n",
+        "\n",
+        "# Although we have imported in cells above but for completeness of solution let us import again\n",
+        "import re\n",
+        "\n",
+        "# Regex to match any number of spaces (whitespaces)\n",
+        "# space and then '+' [+ denotes any number of occurences together]\n",
+        "empty_str_regex = r' +'\n",
+        "\n",
+        "# Take string input from user\n",
+        "string_input_1 = input('Enter string with whitespaces: ')\n",
+        "\n",
+        "# Replace whitespaces with single space ' '\n",
+        "result_str = re.sub(empty_str_regex, ' ', string_input_1)\n",
+        "\n",
+        "result_str"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1404,10 +1534,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Entered url https://www.google.com  is Valid.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - using REGEX\n",
+        "\n",
+        "import re\n",
+        "\n",
+        "# Valid URL regex\n",
+        "valid_url_regex = r'(https?:\\/\\/(?:www\\.|(?!www))[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\\.[^\\s]{2,}|www\\.[a-zA-Z0-9][a-zA-Z0-9-]+[a-zA-Z0-9]\\.[^\\s]{2,}|https?:\\/\\/(?:www\\.|(?!www))[a-zA-Z0-9]+\\.[^\\s]{2,}|www\\.[a-zA-Z0-9]+\\.[^\\s]{2,})'\n",
+        "\n",
+        "# Take url input\n",
+        "url = input('Enter url: ')\n",
+        "\n",
+        "# Check validity and print\n",
+        "if(re.search(valid_url_regex, url)):\n",
+        "    print(f'Entered url {url}  is Valid.')\n",
+        "else:\n",
+        "    print(f'Entered url {url}  is Invalid.')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1419,21 +1573,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Protcol in https://www.google.com is https\n"
+          ]
         }
       ],
-      "source": []
+      "source": [
+        "# Approach - Since protocols are followed by :// always so we can simply use this to split the string\n",
+        "# post string first element will be protocol\n",
+        "\n",
+        "# Take url input\n",
+        "url = input('Enter url: ')\n",
+        "\n",
+        "# Get protocol\n",
+        "protocol = url.split('://')[0]\n",
+        "\n",
+        "# Print protocol\n",
+        "print(f'Protcol in {url} is {protocol}')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1488,10 +1651,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "This string contains  punctuations\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - we can use inbuilt module of python i.e. string, to get list of punctuation and use translate and str.maketrans\n",
+        "\n",
+        "# import string module\n",
+        "import string\n",
+        "\n",
+        "# Take input string from user\n",
+        "string_with_punctuations = input('Enter string: ')\n",
+        "\n",
+        "# Remove punctuations\n",
+        "# x and y are empty and z is punctuation string whose matchin char will be marked as none\n",
+        "trans = str.maketrans('', '', string.punctuation)\n",
+        "string_without_punctuations = string_with_punctuations.translate(trans)\n",
+        "\n",
+        "# Print result\n",
+        "print(string_without_punctuations)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1503,10 +1690,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "String \"23445\" contains only digits.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Take input string from user\n",
+        "string_to_check = input('Enter string: ')\n",
+        "\n",
+        "# Check if string is only digits\n",
+        "contains_only_digits = string_to_check.isdigit()\n",
+        "\n",
+        "# Print result\n",
+        "if(contains_only_digits):\n",
+        "    print(f'String \"{string_to_check}\" contains only digits.')\n",
+        "else:\n",
+        "    print(f'String \"{string_to_check}\" does not contains only digits.')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1517,10 +1724,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "String \"jwrjlrj43234\" does not contains only alphabets.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Take input string from user\n",
+        "string_to_check = input('Enter string: ')\n",
+        "\n",
+        "# Check if string is only alphabets\n",
+        "contains_only_alphabet_letters = string_to_check.isalpha()\n",
+        "\n",
+        "# Print result\n",
+        "if(contains_only_alphabet_letters):\n",
+        "    print(f'String \"{string_to_check}\" contains only alphabets.')\n",
+        "else:\n",
+        "    print(f'String \"{string_to_check}\" does not contains only alphabets.')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1532,10 +1759,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['R', 'o', 'b', 'i', 'n']\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Take input string from user\n",
+        "string_inpt = input('Enter string: ')\n",
+        "\n",
+        "# Create a list of char from string - casting string to list\n",
+        "list_of_chars = list(string_inpt)\n",
+        "\n",
+        "# print list of chars\n",
+        "print(list_of_chars)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1547,25 +1791,109 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "'earth' and 'heart' are Anagram\n"
+          ]
+        }
+      ],
+      "source": [
+        "# What are anagrams ? - An Anagram is a word or phrase that is formed by rearranging all the letters of a different word or phrase exactly once.\n",
+        "\n",
+        "# Approach - we can sort the string and then compare if same chars are used then sorted string will be same \n",
+        "# for above either use sorted in built method or convert string to list and sort the list and join it back\n",
+        "# sorted method is well suited in this scenario\n",
+        "\n",
+        "def is_anagram(string_1:str, string_2:str) -> bool:\n",
+        "    # Check for anagram\n",
+        "    sorted_str_1 = sorted(string_1)\n",
+        "    sorted_str_2 = sorted(string_2)\n",
+        "\n",
+        "    return sorted_str_1 == sorted_str_2\n",
+        "\n",
+        "# Take input string_1 from user\n",
+        "string_inpt_1 = input('Enter string 1: ')\n",
+        "\n",
+        "# Take input string_2 from user\n",
+        "string_inpt_2 = input('Enter string 2: ')\n",
+        "\n",
+        "# Check for anagram\n",
+        "sorted_str_1 = sorted(string_inpt_1)\n",
+        "sorted_str_2 = sorted(string_inpt_2)\n",
+        "\n",
+        "isanagram = is_anagram(string_inpt_1, string_inpt_2)\n",
+        "\n",
+        "# Print result\n",
+        "if (isanagram):\n",
+        "    print(f\"'{string_inpt_1}' and '{string_inpt_2}' are Anagram\")\n",
+        "else:\n",
+        "    print(f\"'{string_inpt_1}' and '{string_inpt_2}' are not Anagram\")"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "\n",
-        "### 42. Encode a string using a Caesar cipher."
+        "### 42. Encode a string using a Caesar cipher.\n",
+        "\n",
+        "* Caesar Ciper Technique\n",
+        "> It is simple most technique to encode the message/strings. In Caesar cipher, the letters are replaced by other letter by shifting certain number of positions."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Encrypted message is: \"Rd sfrj nx Wtgns Ufggn\"\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Since we have to replace each letter with moving certain positions from letter\n",
+        "# For last letters we will have to continue from starting letters: let say shift size is 1 then A become B and so on. And Z becomes A.\n",
+        "# We have to take remainder (% 26) and since Unicode of 'A' and 'a' (uppercase and lowercase) are different we will have to handle them separately\n",
+        "# ord('a') = 97 (unicode of a) and chr(97) = 'a'\n",
+        "\n",
+        "# Function - takes the shift size (salt) and message, return the encrypted message\n",
+        "def encrypt_using_caesar_cipher(shift:int, message:str) -> string:\n",
+        "    encrypted_message = ''\n",
+        "    # Iterate on each letter\n",
+        "    for letter in message:\n",
+        "        # Handle separately for uppercase and lowercase and for space replace it with space itself\n",
+        "        if (letter == ' '):\n",
+        "            encrypted_message += ' '\n",
+        "        elif(letter.islower()):\n",
+        "            enc_char_unicode = ((ord(letter) + shift - 97) % 26 + 97)\n",
+        "            encrypted_message += chr(enc_char_unicode)\n",
+        "        else:\n",
+        "            enc_char_unicode = ((ord(letter) + shift - 65) % 26 + 65)\n",
+        "            encrypted_message += chr(enc_char_unicode)\n",
+        "    \n",
+        "    return encrypted_message\n",
+        "\n",
+        "# Take a message input from user\n",
+        "plain_message = input('Enter you message to encrypt: ')\n",
+        "\n",
+        "# Take salt shift from user\n",
+        "shift_size = int(input('Enter your shift size (salt): '))\n",
+        "\n",
+        "# Encrypt the message\n",
+        "encrypted_msg = encrypt_using_caesar_cipher(shift_size, plain_message)\n",
+        "\n",
+        "# Print encrypted msg\n",
+        "print(f'Encrypted message is: \"{encrypted_msg}\"')\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1577,10 +1905,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Decrypted message is: \"My name is Robin Pabbi\"\n"
+          ]
+        }
+      ],
+      "source": [
+        "# As per Carsar cipher technique to encode we shift the letter by given number\n",
+        "# for decoding we shift same number of steps back\n",
+        "# Basically if we call same method above i.e. encrypt_using_caesar_cipher with negative shift number (shift * -1) it will give use plain message\n",
+        "# Also we can also do 26-shift to get right shift for depcryption\n",
+        "\n",
+        "# Function - takes the shift size (salt) and message, return the encrypted message\n",
+        "def encrypt_using_caesar_cipher(shift:int, message:str) -> string:\n",
+        "    encrypted_message = ''\n",
+        "    # Iterate on each letter\n",
+        "    for letter in message:\n",
+        "        # Handle separately for uppercase and lowercase and for space replace it with space itself\n",
+        "        if (letter == ' '):\n",
+        "            encrypted_message += ' '\n",
+        "        elif(letter.islower()):\n",
+        "            enc_char_unicode = ((ord(letter) + shift - 97) % 26 + 97)\n",
+        "            encrypted_message += chr(enc_char_unicode)\n",
+        "        else:\n",
+        "            enc_char_unicode = ((ord(letter) + shift - 65) % 26 + 65)\n",
+        "            encrypted_message += chr(enc_char_unicode)\n",
+        "    \n",
+        "    return encrypted_message\n",
+        "\n",
+        "# Function - takes the shift size (salt) and encrypted message, return the plain message\n",
+        "def decrypt_using_caesar_cipher(shift:int, message:str) -> string:\n",
+        "    return encrypt_using_caesar_cipher(26-shift, message)\n",
+        "\n",
+        "# Take a message input from user\n",
+        "encrypted_mssage = input('Enter you message to decrypt: ')\n",
+        "\n",
+        "# Take salt shift from user\n",
+        "shift_size = int(input('Enter your shift size (salt): '))\n",
+        "\n",
+        "# Decrypt the message\n",
+        "decrypted_msg = decrypt_using_caesar_cipher(shift_size, encrypted_mssage)\n",
+        "\n",
+        "# Print encrypted msg\n",
+        "print(f'Decrypted message is: \"{decrypted_msg}\"')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1683,6 +2057,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# List Based Practice Problem :"
+      ]
     },
     {
       "cell_type": "markdown",
